--- a/home/styleH.css
+++ b/home/styleH.css
@@ -1,3 +1,611 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  width: 100dvw;
+  font-family: Optima, sans-serif;
+  line-height: 1.5;
+  background-color: wheat;
+  width: 100vw;
+}
+
+/* --------------------------------------HEADER CODE-------------------------------------------- */
+header {
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+}
+
+/* --------------------------------------NAVBAR CODE-------------------------------------------- */
+nav {
+  /* zindex keeps nav bar on top of .hero background image */
+  z-index: 2;
+  background-color: #557669;
+  position: sticky;
+  top: 0;
+  text-align: center;
+}
+
+nav h1 {
+  color: wheat;
+  font-size: 250%;
+}
+
+nav ul li {
+  display: inline;
+  list-style: none;
+  font-size: 125%;
+  margin: 0, 20%;
+}
+
+nav ul li a {
+  color: wheat;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  padding: 0 5%;
+}
+
+nav ul li a:hover {
+  color: #cd4439;
+}
+
+#pocketlogo {
+  border-radius: 5px;
+  height: 2em;
+}
+
+/* --------------------------------------HERO CODE-------------------------------------------- */
+.hero {
+  color: rgb(245, 222, 179);
+  background-image: url("../photos/heroimage.jpeg");
+  opacity: 0.75;
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 1;
+}
+
+.hero h2 {
+  margin-top: 0;
+  text-shadow: 10px;
+  font-size: 250%;
+  text-shadow: 3px 3px 0 rgba(0, 0, 0, 0.808);
+}
+
+.hero p {
+  font-size: 110%;
+  margin: 90px 30px;
+  text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.808);
+}
+
+.hero-btn {
+  background-color: #cd4439;
+  color: #f2f2f2;
+  font-size: 50%;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 5px 10px;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.808);
+}
+
+.hero-btn:hover {
+  background-color: #f2f2f2;
+  color: #cd4439;
+  border: 2px solid #cd4439;
+}
+/* --------------------------------------MAIN/SUBSECTIONS CODE-------------------------------------------- */
+
+.featured h4 {
+  color: #3f2218;
+  text-align: center;
+  font-size: 120%;
+  font-weight: bold;
+  text-align: center;
+  margin: 8% 0% 4%;
+}
+
+/* --------------------------------------CAROUSEL CODE-------------------------------------------- */
+/* Slideshow container */
+.slideshow-container {
+  max-width: 50%;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: all-scroll;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #f2f2f2;
+  background-color: #55766979;
+  font-weight: bold;
+  font-size: 100%;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: #557669;
+}
+
+.slide-photo {
+  height: 10%;
+  width: 100%;
+}
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: #3f221871;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #3f2218;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* --------------------------------------SUBSECTIONS CODE-------------------------------------------- */
+.subsection {
+  text-align: center;
+  width: 100%;
+  padding: 0;
+}
+
+.subsection h4 {
+  position: relative;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 10% 0%;
+  text-decoration: none;
+}
+
+.subsection p {
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 2%;
+  padding: 0% 10%;
+}
+
+.page-link {
+  text-decoration: none;
+}
+
+.btn {
+  display: inline-block;
+  background-color: #cd4439;
+  color: #fff;
+  font-size: 15px;
+  text-decoration: none;
+  margin: 5%;
+  padding: 5px 10px;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.808);
+}
+
+.btn:hover {
+  background-color: #fff;
+  color: #cd4439;
+  border: 2px solid #cd4439;
+}
+
+#section1 {
+  color: rgb(243, 230, 206);
+  background-image: url(../photos/shophome.webp);
+  background-size: cover;
+  background-position: center;
+  padding: 20% 10% 20% 10%;
+}
+
+.pvw-title1 span {
+  display: none;
+}
+
+.pvw-title2 span {
+  display: none;
+}
+
+#section1 h4 {
+  color: rgb(243, 230, 206);
+}
+
+#section2 {
+  color: #3f2218;
+}
+
+#section3 h4 {
+  color: rgb(243, 230, 206);
+}
+
+#section3 {
+  color: rgb(243, 230, 206);
+  align-items: center;
+  background-image: url("../photos/warpockets.webp");
+  background-size: cover;
+  background-position: center;
+  padding: 8px 0px;
+}
+
+/* ------------------------------------Footer Code----------------------------------- */
+footer {
+  background-color: #007065;
+  color: rgb(243, 230, 206);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto auto;
+  text-align: center;
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.social-icons li {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 0px;
+}
+
+.social-icons ul {
+  text-align: center;
+  bottom: 0;
+  left: 0;
+}
+
+.socialbutton {
+  height: 20px;
+  width: 20px;
+}
+
+.footer-section h5 {
+  font-weight: normal;
+  font-size: 80%;
+}
+
+.footer-section ul {
+  font-size: 60%;
+  list-style: none;
+}
+
+.footer-section a {
+  text-decoration: none;
+  color: rgb(243, 230, 206);
+  font-size: 25%;
+}
+
+#footer-s1 {
+  grid-row: 1;
+  grid-column: 1 / span 2;
+}
+
+#footer-s2 {
+  grid-row: 2;
+  grid-column: 1;
+  justify-self: center;
+}
+
+#footer-s3 {
+  grid-row: 2;
+  grid-column: 2;
+  justify-self: center;
+}
+
+#footer-s4 {
+  margin-top: 10px;
+  font-size: 10%;
+  grid-row: 3;
+  grid-column: 1 / span 2;
+}
+
+/* Colorpallette
+#eaceb4
+#e79e85
+#cd4439
+#9d2503
+#7b3c3c
+#ecbc55
+#557669
+#669b7c
+#007065
+*/
+
+/* Small devices (landscape tablets) */
+@media (min-width: 768px) {
+  /* ------------NAVBAR QUERY CODE-------------- */
+
+  nav h1 {
+    font-size: 300%;
+  }
+
+  nav ul li {
+    font-size: 125%;
+    margin: 0, 15%;
+  }
+
+  /* ---------------HERO QUERY CODE--------------- */
+  .hero {
+    height: 515px;
+  }
+
+  .hero h2 {
+    font-size: 300%;
+    text-shadow: 3px 3px 0 rgba(0, 0, 0, 0.808);
+  }
+
+  .hero p {
+    font-size: 180%;
+    margin: 16% 0% 20%;
+  }
+
+  .hero-btn {
+    font-size: 80%;
+    font-weight: normal;
+  }
+
+  /* ---------------MAIN QUERY CODE--------------- */
+
+  .featured h4 {
+    font-size: 180%;
+    font-weight: bold;
+    text-align: center;
+    margin: 1% 0% 1%;
+  }
+
+  /* ------------SUBSECTIONS QUERY CODE----------- */
+  .pvw-title1:after {
+    font-size: 20px;
+    content: "Experience the effortless comfort and style of our latest collection. Each item is designed with functional pockets, so you can carry your essentials without compromising on style.";
+  }
+
+  .pvw-title2:after {
+    font-size: 20px;
+    padding: 0px 10px;
+    content: "We believe that professional attire shouldn't have to compromise comfort, practicality, or style. That's why we design every article of clothing with pockets, to eliminate the frustration of having to carry a purse or sacrifice functionality. Our commitment to functionality and inclusivity is inspired by the ongoing war on pockets in women's clothing. We strive to make a difference in this industry by offering comfortable yet stylish clothing options that enable women to balance motherhood, education, the boardroom, and so much more without compromising on their personal style. Our goal is to take professional clothing from sexist to sexy, by promoting inclusivity and empowering women to feel confident and productive in any setting.";
+  }
+
+  .subsection h4 {
+    font-size: 50px;
+  }
+
+  .subsection p {
+    font-size: 20px;
+    padding: 30px 0px 0px;
+    margin-bottom: 0px;
+  }
+
+  .btn {
+    font-size: 15px;
+    padding: 5px 15px;
+  }
+
+  #section1 p {
+    padding: 5px 0px;
+  }
+
+  #section2 p {
+    font-size: 20px;
+    padding: 10px 60px;
+  }
+
+  #section3 h4 {
+    padding-top: 60px;
+  }
+
+  #section3 {
+    padding: 15px 60px;
+  }
+
+  /* -------------FOOTER QUERY CODE------------ */
+  .socialbutton {
+    height: 30px;
+    width: 30px;
+  }
+
+  .social-icons li {
+    padding: 20px 70px;
+    margin: 0px;
+  }
+
+  .footer-section h5 {
+    font-size: 120%;
+    padding-bottom: 0px;
+  }
+
+  .footer-section ul {
+    font-size: 150%;
+  }
+
+  .footer-section a {
+    font-size: 50%;
+  }
+
+  .footer-section li {
+    height: 30px;
+  }
+}
+
+/* Large devices (desktops) */
+@media (min-width: 1020px) {
+  /* ------------NAVBAR QUERY CODE-------------- */
+  nav h1 {
+    font-size: 300%;
+    line-height: 1.1;
+  }
+
+  nav ul li {
+    font-size: 120%;
+  }
+
+  /* ---------------HERO QUERY CODE--------------- */
+
+  .hero {
+    height: 90vh;
+  }
+  .hero h2 {
+    font-size: 350%;
+    margin-top: 65px;
+  }
+
+  .hero p {
+    font-size: 150%;
+    margin: 20px 30px;
+  }
+
+  .hero-btn {
+    font-size: 80%;
+    padding: 5px 10px;
+  }
+
+  /* --------------CAROUSEL QUERY CODE--------------- */
+
+  .featured h4 {
+    font-size: 200%;
+    margin: 1% 0% 1%;
+  }
+
+  /* Slideshow container */
+  .slideshow-container {
+    max-width: 50%;
+    position: relative;
+    margin: auto;
+  }
+
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+    text-align: center;
+  }
+
+  .slide-photo {
+    height: 5%;
+    width: 50%;
+  }
+
+  .slide-photo img {
+    text-align: center;
+  }
+
+  .dot {
+    height: 15px;
+    width: 15px;
+    margin: 5px;
+  }
+
+  /* ------------SUBSECTIONS QUERY CODE----------- */
+  .subsection {
+    padding: 0px 20px;
+  }
+
+  .subsection a {
+    padding: 0px;
+  }
+
+  .subsection h4 {
+    font-size: 40px;
+    margin: 10% 0% 0%;
+  }
+
+  .subsection p {
+    font-size: 16px;
+  }
+
+  #section1 {
+    padding: 10px 300px 50px;
+  }
+
+  #section1 h4 {
+    padding: 30px 10px;
+  }
+
+  .pvw-title1 span {
+    display: none;
+    padding: 0% 10%;
+  }
+
+  #section2 h4 {
+    margin-top: 40px;
+  }
+
+  #section2 p {
+    font-size: 20px;
+    padding: 10px 250px;
+  }
+
+  .btn {
+    font-size: 15px;
+    margin-top: 10px;
+  }
+  #section3 p {
+    font-size: 20px;
+  }
+
+  #section3 {
+    padding: 15px 200px;
+  }
+
+  #section3 h4 {
+    padding-top: 20px;
+    margin-top: 0px;
+  }
+
+  /* -------------FOOTER QUERY CODE------------ */
+
+  .social-icons li {
+    padding: 10px 75px 50px;
+    margin: 0px;
+  }
+
+  .footer-section h5 {
+    font-size: 120%;
+    padding-bottom: 0px;
+  }
+
+  .footer-section a {
+    font-size: 60%;
+  }
 }
