--- a/product/styleP.css
+++ b/product/styleP.css
@@ -1,3 +1,55 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Optima, sans-serif;
+  line-height: 1.5;
+  background-color: wheat;
+  width: 100vw;
+}
+
+/* --------------------------------------HEADER CODE-------------------------------------------- */
+header {
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+}
+
+/* --------------------------------------NAVBAR CODE-------------------------------------------- */
+nav {
+  /* zindex keeps nav bar on top of .hero background image */
+  z-index: 2;
+  background-color: #557669;
+  position: sticky;
+  top: 0;
+  text-align: center;
+}
+
+nav h1 {
+  color: wheat;
+  font-size: 250%;
+}
+
+nav ul li {
+  display: inline;
+  list-style: none;
+  font-size: 125%;
+  margin: 0, 20%;
+}
+
+nav ul li a {
+  color: wheat;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  padding: 0 5%;
+}
+
+nav ul li a:hover {
+  color: #cd4439;
+}
+
 .product {
   border: 1px solid black;
   padding: 10px;
@@ -13,4 +65,156 @@
   max-width: 100%;
   height: auto;
   margin-bottom: 10px;
+}
+
+/* ------------------------------------Footer Code----------------------------------- */
+footer {
+  background-color: #007065;
+  color: rgb(243, 230, 206);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto auto;
+  text-align: center;
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.social-icons li {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 0px;
+}
+
+.social-icons ul {
+  text-align: center;
+  bottom: 0;
+  left: 0;
+}
+
+.socialbutton {
+  height: 20px;
+  width: 20px;
+}
+
+.footer-section h5 {
+  font-weight: normal;
+  font-size: 80%;
+}
+
+.footer-section ul {
+  font-size: 60%;
+  list-style: none;
+}
+
+.footer-section a {
+  text-decoration: none;
+  color: rgb(243, 230, 206);
+  font-size: 25%;
+}
+
+#footer-s1 {
+  grid-row: 1;
+  grid-column: 1 / span 2;
+}
+
+#footer-s2 {
+  grid-row: 2;
+  grid-column: 1;
+  justify-self: center;
+}
+
+#footer-s3 {
+  grid-row: 2;
+  grid-column: 2;
+  justify-self: center;
+}
+
+#footer-s4 {
+  margin-top: 10px;
+  font-size: 10%;
+  grid-row: 3;
+  grid-column: 1 / span 2;
+}
+
+/* Colorpallette
+#eaceb4
+#e79e85
+#cd4439
+#9d2503
+#7b3c3c
+#ecbc55
+#557669
+#669b7c
+#007065
+*/
+
+/* Small devices (landscape tablets) */
+@media (min-width: 768px) {
+  /* ------------NAVBAR QUERY CODE-------------- */
+
+  nav h1 {
+    font-size: 300%;
+  }
+
+  nav ul li {
+    font-size: 125%;
+    margin: 0, 15%;
+  }
+
+  /* -------------FOOTER QUERY CODE------------ */
+  .socialbutton {
+    height: 30px;
+    width: 30px;
+  }
+
+  .social-icons li {
+    padding: 20px 70px;
+    margin: 0px;
+  }
+
+  .footer-section h5 {
+    font-size: 120%;
+    padding-bottom: 0px;
+  }
+
+  .footer-section ul {
+    font-size: 150%;
+  }
+
+  .footer-section a {
+    font-size: 50%;
+  }
+
+  .footer-section li {
+    height: 30px;
+  }
+}
+
+/* Large devices (desktops) */
+@media (min-width: 1020px) {
+  /* ------------NAVBAR QUERY CODE-------------- */
+  nav h1 {
+    font-size: 300%;
+    line-height: 1.1;
+  }
+
+  nav ul li {
+    font-size: 120%;
+  }
+
+  /* -------------FOOTER QUERY CODE------------ */
+
+  .social-icons li {
+    padding: 10px 75px 50px;
+    margin: 0px;
+  }
+
+  .footer-section h5 {
+    font-size: 120%;
+    padding-bottom: 0px;
+  }
+
+  .footer-section a {
+    font-size: 60%;
+  }
 }
