--- a/product/styleP.css
+++ b/product/styleP.css
@@ -7,12 +7,15 @@
 body {
   font-family: Optima, sans-serif;
   line-height: 1.5;
-  background-color: wheat;
+  background-color: #eaceb4;
   width: 100vw;
+  text-align: center;
 }
 
 /* --------------------------------------HEADER CODE-------------------------------------------- */
 header {
+  position: sticky;
+  top: 0;
   justify-content: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
 }
@@ -50,10 +53,29 @@ nav ul li a:hover {
   color: #cd4439;
 }
 
+/* ------------------------------------Styles Section Code----------------------------------- */
+
+#style-section {
+  background-color: #e79e85;
+}
+
+h2 {
+  text-align: center;
+  font-weight: normal;
+  margin-bottom: 5%;
+}
+
+#styles-subsection {
+  display: none;
+}
+
+/* --------------------------------------Product CODE-------------------------------------------- */
+
 .product {
+  background-color: #ecbc55a1;
   border: 1px solid black;
   padding: 10px;
-  margin-bottom: 30px; /* increased from 20px */
+  margin-bottom: 30px;
   margin-left: 15px;
   margin-right: 15px;
   display: inline-grid;
