--- a/product/styleP.css
+++ b/product/styleP.css
@@ -14,6 +14,8 @@ body {
 
 /* --------------------------------------HEADER CODE-------------------------------------------- */
 header {
+  /* Zindex for menu page so photos dont roll over */
+  z-index: 5;
   position: sticky;
   top: 0;
   justify-content: center;
@@ -22,8 +24,6 @@ header {
 
 /* --------------------------------------NAVBAR CODE-------------------------------------------- */
 nav {
-  /* zindex keeps nav bar on top of .hero background image */
-  z-index: 2;
   background-color: #557669;
   position: sticky;
   top: 0;
@@ -71,7 +71,7 @@ h2 {
 
 /* --------------------------------------Product CODE-------------------------------------------- */
 
-.product {
+/* .product {
   background-color: #ecbc55a1;
   border: 1px solid black;
   padding: 10px;
@@ -87,6 +87,71 @@ h2 {
   max-width: 100%;
   height: auto;
   margin-bottom: 10px;
+} */
+
+/* #products {
+  display: inline-grid;
+  flex-wrap: wrap;
+} */
+
+.product {
+  background-color: #ecbc55a1;
+  border: 1px solid black;
+  padding: 10px;
+  margin: 10px;
+  width: 250px;
+  position: relative;
+  display: inline-grid;
+}
+
+.product h2 {
+  font-size: 1.2em;
+}
+
+.product img {
+  width: 100%;
+  height: auto;
+  transition: filter 0.3s ease;
+}
+
+.product:hover img {
+  filter: brightness(0.3);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.product:hover .overlay {
+  opacity: 1;
+}
+
+.description {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 1.2em;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.product:hover .description {
+  opacity: 1;
 }
 
 /* ------------------------------------Footer Code----------------------------------- */
