--- a/contact/styleCo.css
+++ b/contact/styleCo.css
@@ -1,3 +1,426 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  width: 100dvw;
+  font-family: Optima, sans-serif;
+  line-height: 1.5;
+  background-color: #eaceb4;
+  width: 100vw;
+  text-align: center;
+}
+
+/* --------------------------------------HEADER CODE-------------------------------------------- */
+header {
+  /* Zindex for menu page so photos dont roll over */
+  z-index: 5;
+  position: sticky;
+  top: 0;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+}
+
+/* --------------------------------------NAVBAR CODE-------------------------------------------- */
+nav {
+  background-color: #557669;
+  position: sticky;
+  top: 0;
+  text-align: center;
+}
+
+nav h1 {
+  color: wheat;
+  font-size: 250%;
+}
+
+nav h1 a {
+  color: wheat;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+nav ul li {
+  display: inline;
+  list-style: none;
+  font-size: 125%;
+  margin: 0, 20%;
+}
+
+nav ul li a {
+  color: wheat;
+  text-decoration: none;
+
+  padding: 0 5%;
+}
+
+nav h1 a:hover {
+  transition: all 0.3s ease-in-out;
+  color: #cd4439;
+}
+
+nav ul li a:hover {
+  transition: all 0.3s ease-in-out;
+  color: #cd4439;
+}
+
+/* --------------------------------------CONTACT FORM CODE-------------------------------------------- */
+
+.contact-header {
+  background-color: #e79e85;
+  color: #3f2218;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+  font-size: 20px;
+  font-weight: normal;
+  margin-bottom: 5%;
+  padding: 10px 0px 3px;
+}
+
+.contact {
+  color: #3f2218;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: solid rgba(128, 128, 128, 0.403) 2px;
+}
+
+/* Layout Set Up of Form CSS Code. */
+form {
+  margin: 0;
+  padding: 0;
+  width: 75%;
+  font-size: 12px;
+  border-radius: 20px;
+}
+
+label {
+  font-size: 15px;
+}
+input {
+  padding: 6px;
+  font-size: 12px;
+  border: 2px inset lightgray;
+  border-radius: 15px;
+  background-color: #fffff0;
+  width: 60%;
+  font-family: Optima, sans-serif;
+  text-align: center;
+}
+
+textarea {
+  padding: 6px;
+  font-size: 12px;
+  border: 2px inset lightgray;
+  border-radius: 20px;
+  background-color: #fffff0;
+  width: 80%;
+  font-family: Optima, sans-serif;
+  text-align: center;
+}
+
+.fbutton {
+  padding: 2px 5px;
+  cursor: pointer;
+  width: 30%;
+  background-color: #cd4439;
+  color: #fff;
+  font-size: 12px;
+  margin: 10px 0;
+}
+
+.fbutton:hover {
+  background-color: #fff;
+  color: #cd4439;
+  border: 2px solid #cd4439;
+}
+
+/* ------------------------------------MISSION Code----------------------------------- */
+section.mission {
+  border-top: solid;
+  border-bottom: solid;
+  border-width: 4px;
+  text-align: center;
+  width: 100%;
+  padding: 0 25px;
+  background-image: url("../photos/warpockets.webp");
+  background-size: cover;
+  background-position: center;
+  color: rgb(243, 230, 206);
+}
+
+.mission h2 {
+  padding-top: 15px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.mission p {
+  font-size: 16px;
+}
+
+/* --------------------------------------NEWSLETTER CODE-------------------------------------------- */
+
+.newsletter-header {
+  background-color: #e79e85;
+  color: #3f2218;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+  font-size: 20px;
+  font-weight: normal;
+  margin-bottom: 5%;
+  padding: 10px 0px 3px;
+}
+
+.newsletter {
+  color: #3f2218;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  color: gray;
+}
+
+/* ------------------------------------Footer Code----------------------------------- */
+footer {
+  background-color: #007065;
+  color: rgb(243, 230, 206);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto auto;
+  text-align: center;
+  margin-top: 0;
+  padding-top: 10px;
+}
+
+.social-icons li {
+  display: inline-block;
+  padding: 5px 15px;
+  margin: 0;
+}
+
+.social-icons ul {
+  text-align: center;
+  bottom: 0;
+  left: 0;
+}
+
+.socialbutton {
+  height: 20px;
+  width: 20px;
+}
+
+.footer-section h5 {
+  font-weight: normal;
+  font-size: 80%;
+}
+
+.footer-section a {
+  text-decoration: none;
+  color: rgb(243, 230, 206);
+  font-size: 25%;
+}
+
+.footer-section ul {
+  font-size: 60%;
+  list-style: none;
+}
+
+#footer-s1 {
+  grid-row: 2;
+  grid-column: 1 / span 2;
+}
+
+#footer-s2 {
+  grid-row: 1;
+  grid-column: 1;
+  justify-self: center;
+}
+
+#footer-s3 {
+  grid-row: 1;
+  grid-column: 2;
+  justify-self: center;
+}
+
+#footer-s4 {
+  font-size: 10%;
+  grid-row: 3;
+  grid-column: 1 / span 2;
+}
+
+/* Colorpallette
+#eaceb4
+#e79e85
+#cd4439
+#9d2503
+#7b3c3c
+#ecbc55
+#557669
+#669b7c
+#007065
+#3f2218
+*/
+
+/* Small devices (landscape tablets) */
+@media (min-width: 768px) {
+  /* ------------NAVBAR QUERY CODE-------------- */
+
+  nav h1 {
+    font-size: 300%;
+  }
+
+  nav ul li {
+    font-size: 125%;
+    margin: 0, 15%;
+  }
+
+  /* -----------CONTACT FORM CODE--------------- */
+
+  .contact-header {
+    font-size: 25px;
+    margin-bottom: 2%;
+  }
+
+  /* Layout Set Up of Form CSS Code. */
+
+  label {
+    font-size: 18px;
+  }
+  input {
+    padding: 6px 3px;
+    font-size: 15px;
+    width: 40%;
+  }
+
+  textarea {
+    padding: 6px 3px;
+    font-size: 15px;
+    width: 50%;
+    font-family: Optima, sans-serif;
+    text-align: center;
+  }
+
+  .fbutton {
+    width: 15%;
+    font-size: 15px;
+  }
+
+  /* ---------------MISSION Code--------------- */
+  .mission h2 {
+    padding-top: 15px;
+    font-size: 26px;
+    font-weight: bold;
+  }
+
+  .mission p {
+    font-size: 18px;
+    padding: 0 50px 10px;
+  }
+
+  /* -------------NEWSLETTER CODE------------- */
+
+  .newsletter-header {
+    font-size: 25px;
+    margin-bottom: 2%;
+  }
+
+  /* -------------FOOTER QUERY CODE------------ */
+  .socialbutton {
+    height: 30px;
+    width: 30px;
+  }
+
+  .social-icons li {
+    margin: 0;
+    padding: 5px 46px;
+  }
+
+  .footer-section h5 {
+    font-size: 120%;
+    padding-bottom: 0;
+  }
+
+  .footer-section ul {
+    font-size: 150%;
+  }
+
+  .footer-section a {
+    font-size: 50%;
+  }
+
+  .footer-section li {
+    height: 30px;
+  }
+}
+
+/* Large devices (desktops) */
+@media (min-width: 1020px) {
+  /* ------------NAVBAR QUERY CODE-------------- */
+  nav h1 {
+    font-size: 300%;
+    line-height: 1.1;
+  }
+
+  nav ul li {
+    font-size: 120%;
+  }
+
+  /* -----------CONTACT FORM CODE--------------- */
+
+  .contact-header {
+    font-size: 35px;
+  }
+
+  /* Layout Set Up of Form CSS Code. */
+
+  label {
+    font-size: 25px;
+  }
+  input {
+    font-size: 20px;
+  }
+
+  textarea {
+    font-size: 25px;
+    width: 55%;
+  }
+
+  .fbutton {
+    width: 15%;
+    font-size: 15px;
+  }
+
+  /* ---------------MISSION Code--------------- */
+  .mission h2 {
+    font-size: 35px;
+  }
+
+  .mission p {
+    font-size: 25px;
+    padding: 0 100px 20px;
+  }
+
+  /* -------------NEWSLETTER CODE------------- */
+
+  .newsletter-header {
+    font-size: 35px;
+  }
+
+  /* -------------FOOTER QUERY CODE------------ */
+
+  .social-icons li {
+    padding: 10px 67px 0px;
+    margin: 0;
+  }
+
+  .footer-section h5 {
+    font-size: 120%;
+    padding-bottom: 0;
+  }
+
+  .footer-section a {
+    font-size: 60%;
+  }
 }
