--- a/home/styleH.css
+++ b/home/styleH.css
@@ -30,6 +30,13 @@ nav {
 nav h1 {
   color: wheat;
   font-size: 250%;
+  cursor: pointer;
+}
+
+nav h1 a {
+  color: wheat;
+  text-decoration: none;
+  font-weight: normal;
 }
 
 nav ul li {
@@ -44,6 +51,11 @@ nav ul li a {
   text-decoration: none;
   transition: all 0.3s ease-in-out;
   padding: 0 5%;
+}
+
+nav h1 a:hover {
+  transition: all 0.3s ease-in-out;
+  color: #cd4439;
 }
 
 nav ul li a:hover {
@@ -280,12 +292,12 @@ footer {
   grid-template-rows: auto auto auto;
   text-align: center;
   margin-top: 0;
-  padding-top: 0;
+  padding-top: 10px;
 }
 
 .social-icons li {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 5px 15px;
   margin: 0;
 }
 
@@ -317,24 +329,23 @@ footer {
 }
 
 #footer-s1 {
-  grid-row: 1;
+  grid-row: 2;
   grid-column: 1 / span 2;
 }
 
 #footer-s2 {
-  grid-row: 2;
+  grid-row: 1;
   grid-column: 1;
   justify-self: center;
 }
 
 #footer-s3 {
-  grid-row: 2;
+  grid-row: 1;
   grid-column: 2;
   justify-self: center;
 }
 
 #footer-s4 {
-  margin-top: 10px;
   font-size: 10%;
   grid-row: 3;
   grid-column: 1 / span 2;
@@ -445,8 +456,8 @@ footer {
   }
 
   .social-icons li {
-    padding: 20px 70px;
     margin: 0;
+    padding: 5px 46px;
   }
 
   .footer-section h5 {
@@ -596,7 +607,7 @@ footer {
   /* -------------FOOTER QUERY CODE------------ */
 
   .social-icons li {
-    padding: 10px 75px 50px;
+    padding: 10px 67px 0px;
     margin: 0;
   }
 
