--- a/product/styleP.css
+++ b/product/styleP.css
@@ -35,6 +35,12 @@ nav h1 {
   font-size: 250%;
 }
 
+nav h1 a {
+  color: wheat;
+  text-decoration: none;
+  font-weight: normal;
+}
+
 nav ul li {
   display: inline;
   list-style: none;
@@ -45,11 +51,17 @@ nav ul li {
 nav ul li a {
   color: wheat;
   text-decoration: none;
-  transition: all 0.3s ease-in-out;
+
   padding: 0 5%;
 }
 
+nav h1 a:hover {
+  transition: all 0.3s ease-in-out;
+  color: #cd4439;
+}
+
 nav ul li a:hover {
+  transition: all 0.3s ease-in-out;
   color: #cd4439;
 }
 
@@ -57,16 +69,38 @@ nav ul li a:hover {
 
 #style-section {
   background-color: #e79e85;
+  padding: 15px 0px 3px;
+  color: #3f2218;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
 }
 
 h2 {
   text-align: center;
   font-weight: normal;
   margin-bottom: 5%;
+  line-height: 0.8;
+  cursor: pointer;
+}
+
+h2.style-main-title:hover {
+  transition: all 0.3s ease-in-out;
+  color: #cd4439;
+}
+
+h3 {
+  font-size: 15px;
+  text-align: center;
+}
+
+#styles-subsection p {
+  font-size: 10px;
+  padding: 0px 10px 10px;
 }
 
 #styles-subsection {
+  padding: 0px 8px;
   display: none;
+  text-align: left;
 }
 
 /* --------------------------------------Product CODE-------------------------------------------- */
@@ -89,14 +123,14 @@ h2 {
   margin-bottom: 10px;
 } */
 
-/* #products {
-  display: inline-grid;
-  flex-wrap: wrap;
-} */
+#products {
+  padding-top: 20px;
+}
 
 .product {
   background-color: #ecbc55a1;
   border: 1px solid black;
+  border-radius: 10px;
   padding: 10px;
   margin: 10px;
   width: 250px;
@@ -104,13 +138,15 @@ h2 {
   display: inline-grid;
 }
 
-.product h2 {
-  font-size: 1.2em;
+.price {
+  font-size: 18px;
+  padding: 5px;
 }
 
 .product img {
   width: 100%;
   height: auto;
+  border-radius: 10px;
   transition: filter 0.3s ease;
 }
 
@@ -123,7 +159,7 @@ h2 {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 81%;
   opacity: 0;
   transition: opacity 0.3s ease;
   background-color: rgba(0, 0, 0, 0.5);
@@ -138,16 +174,42 @@ h2 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #fff;
-  font-size: 1.2em;
+  color: rgb(243, 230, 206);
+  font-size: 1em;
   text-align: center;
   width: 100%;
   height: 100%;
   display: flex;
+  padding: 10px 20px;
   justify-content: center;
   align-items: center;
   opacity: 0;
   transition: opacity 0.3s ease;
+}
+
+.order-button {
+  background-color: #e79e85;
+  border: none;
+  color: black;
+  padding: 5px 0px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 0px 50px;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.order-button:hover {
+  background-color: rgb(243, 230, 206);
+  color: #cd4439;
+  border: 2px solid #cd4439;
+}
+
+order-button:active {
+  background-color: #7b3c3c; /* Even darker green */
+  transform: translateY(2px); /* Add a slight drop shadow effect */
 }
 
 .product:hover .description {
@@ -163,12 +225,12 @@ footer {
   grid-template-rows: auto auto auto;
   text-align: center;
   margin-top: 0;
-  padding-top: 0;
+  padding-top: 10px;
 }
 
 .social-icons li {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 5px 15px;
   margin: 0;
 }
 
@@ -200,24 +262,23 @@ footer {
 }
 
 #footer-s1 {
-  grid-row: 1;
+  grid-row: 2;
   grid-column: 1 / span 2;
 }
 
 #footer-s2 {
-  grid-row: 2;
+  grid-row: 1;
   grid-column: 1;
   justify-self: center;
 }
 
 #footer-s3 {
-  grid-row: 2;
+  grid-row: 1;
   grid-column: 2;
   justify-self: center;
 }
 
 #footer-s4 {
-  margin-top: 10px;
   font-size: 10%;
   grid-row: 3;
   grid-column: 1 / span 2;
@@ -248,6 +309,31 @@ footer {
     margin: 0, 15%;
   }
 
+  /* ---------STYLE SECTION QUERY CODE---------- */
+
+  h2.style-main-title {
+    margin-bottom: 2%;
+    font-size: 30px;
+  }
+
+  h2.style-main-title:hover {
+    color: #cd4439;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
+
+  #styles-subsection p {
+    font-size: 15px;
+    padding: 0px 15px 10px;
+  }
+
+  #styles-subsection {
+    padding: 0px 40px;
+    text-align: center;
+  }
+
   /* -------------FOOTER QUERY CODE------------ */
   .socialbutton {
     height: 30px;
@@ -255,8 +341,8 @@ footer {
   }
 
   .social-icons li {
-    padding: 20px 70px;
     margin: 0;
+    padding: 5px 46px;
   }
 
   .footer-section h5 {
@@ -289,10 +375,15 @@ footer {
     font-size: 120%;
   }
 
+  /* ---------STYLE SECTION QUERY CODE---------- */
+  #styles-subsection p {
+    font-size: 15px;
+    padding: 0px 250px 10px;
+  }
   /* -------------FOOTER QUERY CODE------------ */
 
   .social-icons li {
-    padding: 10px 75px 50px;
+    padding: 10px 67px 0px;
     margin: 0;
   }
 
