--- a/product/styleP.css
+++ b/product/styleP.css
@@ -120,7 +120,7 @@ h3 {
 
 /* --------------------------------------Product CODE-------------------------------------------- */
 
-/* .product {
+.product {
   background-color: #ecbc55a1;
   border: 1px solid black;
   padding: 10px;
@@ -136,9 +136,8 @@ h3 {
   max-width: 100%;
   height: auto;
   margin-bottom: 10px;
-} */
-
-#products {
+}
+*/ #products {
   padding-top: 20px;
 }
 
@@ -408,6 +407,7 @@ footer {
     border-top: none;
     border-bottom: none;
   }
+  */
 
   /* ---------STYLE SECTION QUERY CODE---------- */
   #styles-subsection p {
